WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111160
[GTK] Memory leak in webkit_web_view_load_request() in WebKit2 API
https://bugs.webkit.org/show_bug.cgi?id=111160
Summary
[GTK] Memory leak in webkit_web_view_load_request() in WebKit2 API
Carlos Garcia Campos
Reported
2013-03-01 04:09:25 PST
leakRef() is used for the returned PassRefPtr without taking the ownership of the leaked ref.
Attachments
Patch
(1.49 KB, patch)
2013-03-01 04:11 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-03-01 04:11:50 PST
Created
attachment 190931
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-03-01 04:12:13 PST
Adding WebKit2 owners to CC.
WebKit Review Bot
Comment 3
2013-03-01 04:20:13 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 4
2013-03-01 10:09:28 PST
Comment on
attachment 190931
[details]
Patch Yikes. Looks good to me.
Benjamin Poulain
Comment 5
2013-03-08 02:21:35 PST
Comment on
attachment 190931
[details]
Patch Ouch :) Funny leakRef() was even used in this context.
Carlos Garcia Campos
Comment 6
2013-03-08 02:25:41 PST
(In reply to
comment #5
)
> (From update of
attachment 190931
[details]
) > Ouch :) > > Funny leakRef() was even used in this context.
Yeah, an unfortunate copy paste from another place where it made sense. Thanks for the review!
WebKit Review Bot
Comment 7
2013-03-08 02:42:20 PST
Comment on
attachment 190931
[details]
Patch Clearing flags on attachment: 190931 Committed
r145202
: <
http://trac.webkit.org/changeset/145202
>
WebKit Review Bot
Comment 8
2013-03-08 02:42:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug