[GTK] Memory leak in webkit_web_view_load_request() in WebKit2 API https://bugs.webkit.org/show_bug.cgi?id=111160

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-03-08
Reviewed by Benjamin Poulain.

leakRef() is used for the returned PassRefPtr without taking the
ownership of the leaked ref.

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_load_request): Use RefPtr local variable.

Canonical link: https://commits.webkit.org/130191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145202 268f45cc-cd09-0410-ab3c-d52691b4dbfc